add JMH benchmark as module